# Open-Quanta-Hello-Quantum-

./: .gitignore  BUILD_PLAN.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  pyproject.toml
examples/algorithms/: grover_search.py
examples/basic/: 01_hello_quantum.py  02_bell_state.py  03_superposition.py
openquanta/: __init__.py  circuit.py  gates.py  qir_bridge.py
openquanta/backends/: __init__.py  base.py  simulator.py
openquanta/modules/: __init__.py  decorator.py  standard.py
tests/: __init__.py  test_backends.py  test_circuit.py  test_gates.py  test_modules.py  test_qir_bridge.py
